<resources>
    <string name="app_name">Sellice</string>
    <string name="return_bag">ส่งคืนถัง</string>
    <string name="select_line">เลือกสายส่ง</string>
    <string name="create_user">เพิ่มลูกค้า</string>
    <string name="discount">ลด</string>
    <string name="discount_text">ส่วนลด/บาท</string>
    <string name="bath">บ.</string>
    <string name="get">รับ</string>
    <string name="get_money">ัรับเงิน</string>
    <string name="sum">รวม</string>
    <string name="sum_value">จำนวนรวม</string>
    <string name="sum_discount">ส่วนลดรวม</string>
    <string name="sum_price">ราคารวม</string>
    <string name="select_date">เลือกวันที่ต้องการ</string>
    <string name="cancel">ยกเลิก</string>
    <string name="save">บันทึก</string>
    <string name="pre_get">สั่ง</string>
    <string name="edit_get_ice">แก้ไขการสั่งขึ้นน้ำแข็ง</string>
    <string name="recive">รับน้ำแข็ง</string>
    <string name="notfound_order">ไม่พบข้อมูลการสั่งน้ำแข็ง</string>
    <string name="ok">ตกลง</string>
    <string name="sum_value_preget">ยอดสั่งรวม</string>
    <string name="sum_recive_value">ยอดรับรวม</string>
    <string name="upload_complete">บันทึกข้อมูลสำเร็จ</string>
    <string name="somthing_worng">ขออภัย มีบางอย่างผิดพลาด</string>
    <string name="get_ice">โอนเข้า</string>
    <string name="get_out_ice">โอนออก</string>
    <string name="pre_get_ice">สั่งน้ำแข็ง</string>
    <string name="you_want_to_get_ice_this_order">คุณต้องการสั่งจากยอดขายนี้หรือไม่</string>
    <string name="menu">รายการ</string>
    <string name="value">จำนวน</string>
    <string name="old">เดิม</string>
    <string name="sell">ขาย</string>
    <string name="free">แถม/กระสอบ</string>
    <string name="sell_value">ขาย/กระสอบ</string>
    <string name="credit">ค้างชำระ</string>
    <string name="cash">เงินสด</string>
    <string name="pay_method">การชำระเงิน</string>
    <string name="price">ยอดต้องชำระ</string>
    <string name="get_cash">รับเงินสด</string>
    <string name="real_pay">ชำระจริง</string>
    <string name="get_full">เต็มจำนวน</string>
    <string name="haft">50%</string>
    <string name="old_debt">หนี้เก่า</string>
    <string name="sum_free">แถมรวม</string>
    <string name="edit">แก้ไข</string>
    <string name="del">ลบ</string>
    <string name="title_activity_maps">Map</string>
    <string name="user_name">ชื่อลูกค้า</string>
    <string name="user_phone">เบอร์โทร</string>
    <string name="search">พิมพ์เพื่อค้นหา</string>
    <string name="pleas_type_user_name">กรุณากรอกชื่อลูกค้า</string>
    <string name="car_driver">คนขับรถ</string>
    <string name="line">สายส่ง</string>
    <string name="child_car">เด็กรถ1</string>
    <string name="child_car2">เด็กรถ2</string>
    <string name="next">ต่อไป</string>
    <string name="show_map">แสดงแผนที่</string>
    <string name="status">สถานะ</string>
    <string name="buy">สั่งซื้อ</string>
    <string name="confirm_to_delete">ยืนยันการลบข้อมูล</string>
    <string name="delete">ลบข้อมูล</string>
    <string name="out">โอน</string>
    <string name="sum_value_sale">ขายรวม</string>
    <string name="sum_value_get">เบิกรวม</string>
    <string name="shold_return_bag">กระสอบ</string>
    <string name="sum_send_price">เงินต้องส่ง</string>
    <string name="sum_debt">ยอดค้าง</string>
</resources>
