<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:paddingRight="10dp"
            android:paddingVertical="10dp"
            android:textSize="20dp"
            android:background="@color/colorPositive"
            android:textAlignment="textEnd"
            android:textColor="@color/colorTextLight"
            android:text="@string/you_want_to_get_ice_this_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <Button
            android:id="@+id/btn_select_date"
            android:paddingRight="10dp"
            android:textAlignment="textEnd"
            android:textColor="@color/colorTextLight"
            android:textSize="20sp"
            android:text="@string/select_date"
            android:background="@color/colorWarning"
            android:layout_width="match_parent"
            android:layout_height="50dp">

        </Button>
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="20"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <Button
                android:textSize="20sp"
                android:text="@string/menu"
                android:background="@color/colorTextLight"
                android:layout_weight="12"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </Button>
            <Button
                android:textColor="@color/colorTextLight"
                android:textSize="20sp"
                android:text="@string/value"
                android:background="@color/colorPositive"
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            </Button>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@color/colorTextTwilight"
            android:id="@+id/btn_negative"
            android:textColor="@color/colorTextLight"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp">

        </Button>
        <ImageView
            android:background="@color/colorTextLight"
            android:layout_marginVertical="5dp"
            android:layout_width="1dp"
            android:layout_height="match_parent">

        </ImageView>
        <Button

            android:id="@+id/btn_positive"
            android:textColor="@color/colorTextLight"
            android:background="@color/colorPositive"
            android:text="@string/pre_get_ice"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp">

        </Button>

    </LinearLayout>

</RelativeLayout>