<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPositive"
    tools:context=".CustomerList">
    <LinearLayout
        android:paddingBottom="10dp"
        android:weightSum="20"
        android:background="@color/colorPositive2"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <EditText
            android:textSize="18sp"
            android:textColor="@color/colorTextLight"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/search"
            android:hint="@string/search"
            android:layout_marginVertical="5dp"
            android:background="@color/colorPositive"
            android:layout_weight="20"
            android:layout_width="0dp"
            android:layout_height="match_parent">

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_marginBottom="50dp"

            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@color/colorPositive"
            android:id="@+id/btn_negative"
            android:textColor="@color/colorTextLight"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp">

        </Button>
        <ImageView
            android:background="@color/colorTextLight"
            android:layout_marginVertical="5dp"
            android:layout_width="1dp"
            android:layout_height="match_parent">

        </ImageView>
        <Button

            android:id="@+id/btn_show_map"
            android:textColor="@color/colorTextLight"
            android:background="@color/colorWarning2"
            android:text="@string/show_map"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp">

        </Button>
        <ImageView
            android:background="@color/colorTextLight"
            android:layout_marginVertical="5dp"
            android:layout_width="1dp"
            android:layout_height="match_parent">

        </ImageView>
        <Button

            android:id="@+id/btn_positive"
            android:textColor="@color/colorTextLight"
            android:background="@color/colorPositive"
            android:text="@string/create_user"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp">

        </Button>

    </LinearLayout>


</RelativeLayout>