<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Send">
    <LinearLayout
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_marginBottom="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
    <LinearLayout

        android:weightSum="8"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/colorPositive"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/txt_line"
                android:paddingLeft="10dp"
                android:text="1"
                android:gravity="center_vertical"
                android:textAlignment="textEnd"
                android:paddingRight="10dp"
                android:textColor="@color/colorTextLight"
                android:textSize="20sp"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <ImageView
                android:layout_marginLeft="20dp"
                android:background="@color/colorTextLight"
                android:layout_width="match_parent"
                android:layout_height="1dp">

            </ImageView>
            <TextView
                android:paddingRight="10dp"
                android:textAlignment="textEnd"
                android:textColor="@color/colorTextLight"
                android:text="@string/line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:background="@color/colorPositive2"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/txt_driver"
                android:textSize="20sp"
                android:textAlignment="textEnd"
                android:paddingRight="10dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorTextLight"
                android:text="แอ็ก"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <ImageView
                android:layout_marginLeft="20dp"
                android:background="@color/colorTextLight"
                android:layout_width="match_parent"
                android:layout_height="1dp">

            </ImageView>
            <TextView
                android:paddingRight="10dp"
                android:textAlignment="textEnd"
                android:textColor="@color/colorTextLight"
                android:text="@string/car_driver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_child1"

            android:background="@color/colorPositive3"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/txt_child1"
                android:paddingLeft="10dp"
                android:text="บอย"
                android:gravity="center_vertical"
                android:textAlignment="textEnd"
                android:paddingRight="10dp"
                android:textColor="@color/colorTextLight"
                android:textSize="20sp"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <ImageView
                android:layout_marginLeft="20dp"
                android:background="@color/colorTextLight"
                android:layout_width="match_parent"
                android:layout_height="1dp">

            </ImageView>
            <TextView
                android:paddingRight="10dp"
                android:textAlignment="textEnd"
                android:textColor="@color/colorTextLight"
                android:text="@string/child_car"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lin_child2"
            android:background="@color/colorPositive3"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/txt_child2"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:paddingRight="10dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorTextLight"
                android:text="อาม"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <ImageView
                android:layout_marginLeft="20dp"
                android:background="@color/colorTextLight"
                android:layout_width="match_parent"
                android:layout_height="1dp">

            </ImageView>
            <TextView
                android:paddingRight="10dp"
                android:textAlignment="textEnd"
                android:textColor="@color/colorTextLight"
                android:text="@string/child_car2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"
        android:weightSum="8"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/colorPositive"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/txt_sum_value"
                android:textSize="20sp"
                android:textAlignment="textEnd"
                android:paddingRight="10dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorTextLight"
                android:text="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <ImageView
                android:layout_marginLeft="20dp"
                android:background="@color/colorTextLight"
                android:layout_width="match_parent"
                android:layout_height="1dp">

            </ImageView>

            <TextView
                android:paddingRight="10dp"
                android:textAlignment="textEnd"
                android:textColor="@color/colorTextLight"
                android:text="@string/sum_value_sale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:background="@color/colorNegative2"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/txt_sum_discount"
                android:paddingLeft="10dp"
                android:text="0"
                android:gravity="center_vertical"
                android:textAlignment="textEnd"
                android:paddingRight="10dp"
                android:textColor="@color/colorTextLight"
                android:textSize="20sp"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <ImageView
                android:layout_marginLeft="20dp"
                android:background="@color/colorTextLight"
                android:layout_width="match_parent"
                android:layout_height="1dp">

            </ImageView>
            <TextView
                android:paddingRight="10dp"
                android:textAlignment="textEnd"
                android:textColor="@color/colorTextLight"
                android:text="@string/sum_discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:background="@color/colorNegative"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/txt_sum_free"
                android:paddingLeft="10dp"
                android:text="0"
                android:gravity="center_vertical"
                android:textAlignment="textEnd"
                android:paddingRight="10dp"
                android:textColor="@color/colorTextLight"
                android:textSize="20sp"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <ImageView
                android:layout_marginLeft="20dp"
                android:background="@color/colorTextLight"
                android:layout_width="match_parent"
                android:layout_height="1dp">

            </ImageView>
            <TextView
                android:paddingRight="10dp"
                android:textAlignment="textEnd"
                android:textColor="@color/colorTextLight"
                android:text="@string/sum_free"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:background="@color/colorWarning"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/txt_sum_price"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:paddingRight="10dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorTextLight"
                android:text="0"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <ImageView
                android:layout_marginLeft="20dp"
                android:background="@color/colorTextLight"
                android:layout_width="match_parent"
                android:layout_height="1dp">

            </ImageView>
            <TextView
                android:paddingRight="10dp"
                android:textAlignment="textEnd"
                android:textColor="@color/colorTextLight"
                android:text="@string/sum_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout

    android:layout_marginBottom="50dp"
    android:layout_alignParentBottom="true"
    android:weightSum="8"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:background="@color/colorPositive2"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/txt_sum_value"
            android:textSize="20sp"
            android:textAlignment="textEnd"
            android:paddingRight="10dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorTextLight"
            android:text="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <ImageView
            android:layout_marginLeft="20dp"
            android:background="@color/colorTextLight"
            android:layout_width="match_parent"
            android:layout_height="1dp">

        </ImageView>
        <TextView
            android:paddingRight="10dp"
            android:textAlignment="textEnd"
            android:textColor="@color/colorTextLight"
            android:text="@string/sum_value_get"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
    </LinearLayout>
    <LinearLayout
        android:background="@color/colorNegative3"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/txt_sum_discount"
            android:paddingLeft="10dp"
            android:text="0"
            android:gravity="center_vertical"
            android:textAlignment="textEnd"
            android:paddingRight="10dp"
            android:textColor="@color/colorTextLight"
            android:textSize="20sp"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <ImageView
            android:layout_marginLeft="20dp"
            android:background="@color/colorTextLight"
            android:layout_width="match_parent"
            android:layout_height="1dp">

        </ImageView>
        <TextView
            android:paddingRight="10dp"
            android:textAlignment="textEnd"
            android:textColor="@color/colorTextLight"
            android:text="@string/shold_return_bag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
    </LinearLayout>
    <LinearLayout
        android:background="@color/colorNegative2"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/txt_sum_free"
            android:paddingLeft="10dp"
            android:text="0"
            android:gravity="center_vertical"
            android:textAlignment="textEnd"
            android:paddingRight="10dp"
            android:textColor="@color/colorTextLight"
            android:textSize="20sp"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <ImageView
            android:layout_marginLeft="20dp"
            android:background="@color/colorTextLight"
            android:layout_width="match_parent"
            android:layout_height="1dp">

        </ImageView>
        <TextView
            android:paddingRight="10dp"
            android:textAlignment="textEnd"
            android:textColor="@color/colorTextLight"
            android:text="@string/sum_debt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
    </LinearLayout>
    <LinearLayout
        android:background="@color/colorWarning2"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/txt_sum_price"
            android:textAlignment="textEnd"
            android:textSize="20sp"
            android:paddingRight="10dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorTextLight"
            android:text="0"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <ImageView
            android:layout_marginLeft="20dp"
            android:background="@color/colorTextLight"
            android:layout_width="match_parent"
            android:layout_height="1dp">

        </ImageView>
        <TextView
            android:paddingRight="10dp"
            android:textAlignment="textEnd"
            android:textColor="@color/colorTextLight"
            android:text="@string/sum_send_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
    </LinearLayout>


</LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@color/colorTextTwilight"
            android:id="@+id/btn_negative"
            android:textColor="@color/colorTextLight"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp">

        </Button>
        <ImageView
            android:background="@color/colorTextLight"
            android:layout_marginVertical="5dp"
            android:layout_width="1dp"
            android:layout_height="match_parent">

        </ImageView>
        <Button

            android:id="@+id/btn_positive"
            android:textColor="@color/colorTextLight"
            android:background="@color/colorPositive"
            android:text="@string/save"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp">

        </Button>

    </LinearLayout>
</RelativeLayout>